samples/_failures_safe/1761303674_bdccda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_993e3c6a.c: In function ‘main’:
./samples/SAFE/__tmp_993e3c6a.c:146:25: error: missing terminating " character
  146 |         fprintf(stderr, "Failed to initialize
      |                         ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_993e3c6a.c:146:9: error: expected expression at end of input
  146 |         fprintf(stderr, "Failed to initialize
      |         ^~~~~~~
./samples/SAFE/__tmp_993e3c6a.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_993e3c6a.c:146:9: error: expected declaration or statement at end of input
